--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -13,8 +13,8 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
+        "laravel/passport": "*",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "*",
         "nesbot/carbon": "^2.57"
     },
     "require-dev": {
