--- a/react-native/package.json
+++ b/react-native/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mobile",
+  "name": "aplicacion",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,15 +10,33 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~44.0.0",
+    "@react-navigation/bottom-tabs": "^6.x",
+    "@react-navigation/drawer": "^6.x",
+    "@react-navigation/native": "^6.x",
+    "@react-navigation/stack": "^6.x",
+    "@react-navigation/native-stack": "^6.x",
+    "axios": "^0.26.1",
+    "babel-plugin-macros": "^3.1.0",
+    "expo": "^44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-paper": "^4.11.2",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-snap-carousel": "^1.3.1",
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-web": "0.17.1",
+    "styled-components": "^5.3.5",
+    "typescript": "~4.3.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12"
   },
   "private": true
 }
