--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^7.0",
         "laravel/passport": "9.0",
         "laravel/tinker": "^2.0",
+        "lcobucci/jwt": "3.4.6",
         "nesbot/carbon": "^2.57"
     },
     "require-dev": {
