--- a/react-native/package.json
+++ b/react-native/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aplicacion",
+  "name": "pro",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,33 +10,45 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/bottom-tabs": "^6.x",
     "@react-navigation/drawer": "^6.x",
+    "@react-navigation/elements": "^1.3.3",
+    "@react-navigation/material-bottom-tabs": "^6.x",
     "@react-navigation/native": "^6.x",
-    "@react-navigation/native-stack": "^6.x",
     "@react-navigation/stack": "^6.x",
+    "@rneui/base": "^4.0.0-rc.1",
+    "@rneui/themed": "^4.0.0-rc.1",
     "axios": "^0.26.1",
     "babel-plugin-macros": "^3.1.0",
     "expo": "^44.0.0",
+    "expo-font": "~10.0.4",
+    "expo-linear-gradient": "~11.0.3",
     "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "expo-updates": "~0.11.6",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-native": "0.64.3",
+    "react-native-animatable": "^1.3.3",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
-    "react-native-paper": "^4.11.2",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-paper": "^4.12.0",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-snap-carousel": "^1.3.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.1",
-    "styled-components": "^5.3.5",
-    "typescript": "~4.3.5"
+    "react-native-web": "0.17.7",
+    "uuid": "^7.0.3",
+    "yet": "^0.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12"
+    "@babel/core": "^7.17.9",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "customize-cra": "^1.0.0",
+    "react-app-rewired": "^2.2.1"
   },
   "private": true
 }
